--- a/vignettes/sensemakr.Rmd
+++ b/vignettes/sensemakr.Rmd
@@ -53,7 +53,7 @@ data("darfur")
 The first step is running the linear outcome model: 
 
 ```{r}
-lm.out  <- lm(peacefactor ~ directlyharmed + age + farmer_dar + herder_dar +
+lm.full  <- lm(peacefactor ~ directlyharmed + age + farmer_dar + herder_dar +
                pastvoted + hhsize_darfur + female + village, data = darfur)
 ```
 
@@ -68,22 +68,32 @@ library(sensemakr)
 sense.out <- sensemakr(model=lm.out, treatment="directlyharmed")
 ```
 
-Note that because no `benchmark` argument was not set, `sensemakr` defaults to using all covariates as benchmarks. For our next task, it will be easier to use only a subsect of the benchmarks: 
+The `sensemakr` object, `sense.out`, contains a variety of useful quantities, including `sensemakr\$benchmarks`, which we will explore below. In common use cases, however, investigators would not inspect this directly but would turn to the `plot` and `summary` methods.  
 
+We turn first to the `summary` method to gain substantive insight into the sensitivity analysis itself.
+
+## Summary and Interpretation
+
+Sensitivity analyses describe the type of confounders that would change our conclusions about an analysis. The challenge is in understanding how credibly such a confounder can be ruled out.  The summary methods provide ample interpretive information, describing the sensitivity results in several ways to increase the odds that investigators can meaningfully evaluate whether the types of confounders describes are likely to exist. A second purpose of provide numerous, verbose descriptions is to provide clear and precise language that investigators can refer to and even cite directly to minimize misunderstandings.
+
+The user simply applies the summary method to the `sensemakr` object,
 ```{r}
-X = c("herder_dar", "female", "age", "pastvoted", "farmer_dar")
-
+summary(sense.out)
 ```
 
-### The `sensemakr` object
+After recpitulating the model, the outcome variable, the treatment variable, and the (unadjusted) treatment effect estimate, the output goes on to describe two types of analyses: a worst case scenario, and benchmarks.  
 
-The object, `sense.out`, is not usually inspected directly, but contains many valuable quantities.  
-
-sense <- sensemakr(model=model, treatment="directlyharmed", benchmarks=X)
+The \textit{worst case scenario} considers the sensitivity of results based on the unexplained variance. The worst case is one in which all unexplained variation in the outcome belongs to an omitted confounder. How strongly would such an omitted variable need to be associated with the treatment in order to reduce the treatment effect estimate by some amount -- say 100\%?
 
 
-Suppose now we are interested in a subset of these covariates 
 
+## Basic Plotting
+The simplest plot is 
+```{r}
+plot(sense.out)
+```
+
+The benchmarks  
 
 # runs benchmarking etc
 sense <- sensemakr(model=model, treatment="directlyharmed", benchmarks=X)
