--- a/README.Rmd
+++ b/README.Rmd
@@ -27,12 +27,34 @@ You can install sensemakr from github with:
 ```{r gh-installation, eval = FALSE}
 # install.packages("devtools")
 devtools::install_github("chadhazlett/sensemakr")
+
+
 ```
+
+Additionally, if you want to install the companion vignette, use the below command instead:
+
+```{r gh-installation-vign, eval = FALSE}
+
+devtools::install_github("chadhazlett/sensemakr",build_vignettes = TRUE,force=TRUE)
+
+vignette('sensemakr')
+
+```
+
 
 ## Example
 
-This is a basic example which shows you how to solve a common problem:
+Below is a basic example of the functionality in the sensemakr package
+
 
 ```{r example}
-## basic example code
+
+library(sensemakr)
+
+lm.out  <- lm(peacefactor ~ directlyharmed + age + female + village, data = darfur)
+
+sense.out <- sensemakr(model=lm.out, treatment="directlyharmed")
+
+plot(sense.out, showvars = list("age","female"))
+
 ```
