better readme better plot() documentation lower-limit replaces lower bound upper-limit replaces upper bound
better vignette rmd
replaced some typos
got rid of \ artifacts
moved questions to github issues

--- a/README.Rmd
+++ b/README.Rmd
@@ -31,7 +31,9 @@ devtools::install_github("chadhazlett/sensemakr")
 
 ```
 
-Additionally, if you want to install the companion vignette, use the below command instead:
+The accompanying vignette can be viewed [here](https://github.com/chadhazlett/sensemakr/blob/master/vignettes/sensemakr.Rmd).
+
+Additionally, if you want to install the companion vignette inside R, use the below command instead:
 
 ```{r gh-installation-vign, eval = FALSE}
 
