--- a/README.Rmd
+++ b/README.Rmd
@@ -18,7 +18,7 @@ knitr::opts_chunk$set(
 
 # sensemakr
 
-The goal of sensemakr is to ...
+The goal of sensemakr is to make a simple sensitivity (to confounding) analysis widely accessible.
 
 ## Installation
 
@@ -27,8 +27,6 @@ You can install sensemakr from github with:
 ```{r gh-installation, eval = FALSE}
 # install.packages("devtools")
 devtools::install_github("chadhazlett/sensemakr")
-
-
 ```
 
 The accompanying vignette can be viewed [here](https://github.com/chadhazlett/sensemakr/blob/master/vignettes/sensemakr.Rmd).
@@ -36,11 +34,8 @@ The accompanying vignette can be viewed [here](https://github.com/chadhazlett/se
 Additionally, if you want to install the companion vignette inside R, use the below command instead:
 
 ```{r gh-installation-vign, eval = FALSE}
-
 devtools::install_github("chadhazlett/sensemakr",build_vignettes = TRUE,force=TRUE)
-
 vignette('sensemakr')
-
 ```
 
 
@@ -50,13 +45,8 @@ Below is a basic example of the functionality in the sensemakr package
 
 
 ```{r example}
-
 library(sensemakr)
-
-lm.out  <- lm(peacefactor ~ directlyharmed + age + female + village, data = darfur)
-
-sense.out <- sensemakr(model=lm.out, treatment="directlyharmed")
-
+lm.out  = lm(peacefactor ~ directlyharmed + age + female + village, data = darfur)
+sense.out = sensemakr(model=lm.out, treatment="directlyharmed")
 plot(sense.out, showvars = list("age","female"))
-
 ```
